--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     // Android Studio Preview support
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.animation:animation-graphics-android:1.6.3'
+    implementation 'androidx.compose.material3:material3-android:1.3.0'
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
@@ -84,11 +85,9 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0")
 
     // pager
-    implementation 'androidx.compose.foundation:foundation:1.6.3'
+    implementation 'androidx.compose.foundation:foundation:1.7.4'
     implementation "com.google.accompanist:accompanist-pager-indicators:0.30.1"
 
     // permissions
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
-
-//    implementation 'androidx.compose.material3:material3'
 }
