--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,15 +65,12 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.animation:animation-graphics-android:1.6.3'
     implementation 'androidx.compose.material3:material3-android:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.2'
+    implementation 'commons-io:commons-io:2.16.1'
 
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+//    debugImplementation 'androidx.compose.ui:ui-tooling'
+//    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     // splashscreen api
     implementation 'androidx.core:core-splashscreen:1.1.0-alpha02'
@@ -90,4 +87,9 @@ dependencies {
 
     // permissions
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+    implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5")
+    implementation "me.onebone:toolbar-compose:2.3.5"
+
+//    implementation("com.googlecode.json-simple:json-simple:1.1.1")
 }
